--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,10 @@ services:
     build:
       context: .
       dockerfile: src/Transactions.API/Dockerfile
+    environment:
+        - ASPNETCORE_URLS=http://0.0.0.0:80
+    ports:
+      - "5000:80"
     networks:
         - esnetwork
   elasticsearch:
